k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: data-catalogue
spec:
  type: NodePort
  selector:
    app: data-catalogue
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 80
